# botdocs

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  bot.py  justfile  mypy.ini  pyproject.toml  pytest.toml  ruff.toml
src/: bot.py
src/handlers/: start.py
tests/: conftest.py
tests/integration/: test_start_handler.py
tests/unit/: test_bot_handlers.py
