[project]
name = "botdocs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "aiogram-test-framework>=1.0.3",
    "factory-boy>=3.3.3",
    "faker>=40.19.1",
    "freezegun>=1.5.5",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "python-decouple-stubs>=3.8.0.4",
    "ruff>=0.15.14",
]

# BUILD SYSTEM
# Используем hatchling как backend — стандарт для современных Python-проектов
# с uv. Указываем packages чтобы uv/hatchling знал, где искать исходники
# при src-layout.
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ — pythonpath root, не импортируемый пакет
packages = ["src"]

# Pytest coverage configuration
[tool.coverage.run]
source_pkgs = ["src"]
branch = true
relative_files = true
omit = [
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
